# genai_resume_scanner

./: .gitignore  1_ATS_Scorer.py  README.md  app.py  exception.py  logger.py  pyproject.toml  requirements.txt
ats_score/src/components/: file_handler.py  text_preprocessor.py
ats_score/src/constants/: constant.py
ats_score/src/services/: model_service.py  prompt_templates.py
pages/: 2_Compare_Candidates.py
