[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ats_scorer"
version = "0.1.0"
description = "A Generative AI project"
authors = [{ name = "Radhika Maheshwari", email = "radhikamaheshwari26@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"


[tool.setuptools.packages.find]
where = ["ats_score"]
